--- a/docs/layouts/_default/single.html
+++ b/docs/layouts/_default/single.html
@@ -26,8 +26,11 @@
               {{ .Date | time.Format (":date_medium" | default "Jan 2, 2006") }}
 
               {{ if or (.Site.Params.singlePages.readTime.enable | default true) (.Params.enableReadingTime) }}
-              <span id="readingTime">
+              <hr>
+              <!--<span id="readingTime">
                 {{ .Site.Params.singlePages.readTime.content | default (i18n "min_read") }}
+              -->
+              
               </span>
               {{ end }}
             </div>
@@ -54,6 +57,36 @@
               </div>
           </aside>
           {{ end }}
+
+        {{/*    {{ if .Params.socialShare | default .Site.Params.singlePages.socialShare | default true }}
+          <aside class="social">
+            <h5>{{ .Site.Params.terms.social | default (i18n "social") }}</h5>
+            <div class="social-content">
+              <ul class="list-inline">
+                <li class="list-inline-item text-center">
+                  <a target="_blank" href="https://www.linkedin.com/feed/?shareActive=true&text={{ .Params.description }} {{ .Site.Params.hostName }}{{ .Permalink | absURL }}">
+                    <i class="fab fa-linkedin"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item text-center">
+                  <a target="_blank" href='https://twitter.com/share?text={{ .Title }}&url={{ .Site.Params.hostName }}{{ .Permalink | absURL }}&hashtags={{ delimit .Params.tags "," }}'>
+                    <i class="fab fa-twitter"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item text-center">
+                  <a target="_blank" href="https://api.whatsapp.com/send?text={{ .Title }}: {{ .Site.Params.hostName }}{{ .Permalink | absURL }}">
+                    <i class="fab fa-whatsapp"></i>
+                  </a>
+                </li>
+                <li class="list-inline-item text-center">
+                  <a target="_blank" href='mailto:?subject={{ .Title }}&amp;body={{ .Site.Params.terms.emailText | default (i18n "email_text") }} {{ .Site.Params.hostName }}{{ .Permalink | absURL }}'>
+                    <i class="fa fa-envelope"></i>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </aside>
+          {{ end }}  */}}
 
           {{ if .Params.tags }}
           <aside class="tags">
